# Virtual_Machine

./: .gitignore  CMakeLists.txt  Doxyconfig  README.md  notes.txt
RNP_Lang/: RNP.cpp  RNP.h
include/: Machine.h  VM_temp.h  assembler.h  lexer.h  types_and_data.h
src/: .Machine.cpp.swp  .main.cpp.swp  Machine.cpp  VM_temp.cpp  assembler.cpp  lexer.cpp  main.cpp
